# opengl-base

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/glad/: glad.c
src/glad/include/glad/: glad.h
